--- a/tests/unit/requirements.txt
+++ b/tests/unit/requirements.txt
@@ -60,3 +60,6 @@ python-nomad >= 2.0.0 ; python_version >= '3.7'
 
 # requirement for jenkins_build, jenkins_node, jenkins_plugin modules
 python-jenkins >= 0.4.12
+
+# requirement for json_patch, json_patch_recipe and json_patch plugins
+jsonpatch
