--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -1146,6 +1146,8 @@ files:
     maintainers: helldorado krauthosting
   $modules/proxmox_backup.py:
     maintainers: IamLunchbox
+  $modules/proxmox_backup_info.py:
+    maintainers: raoufnezhad mmayabi
   $modules/proxmox_nic.py:
     maintainers: Kogelvis krauthosting
   $modules/proxmox_node_info.py:
